// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SportScore should show a SportScore with default styling 1`] = `
<View
  accessibilityLabel="Luton 3 - 0 Watford"
  style={
    Array [
      Object {
        "backgroundColor": "#ffe500",
        "padding": 0,
        "paddingBottom": 2,
        "paddingHorizontal": 4.666666666666667,
      },
      undefined,
    ]
  }
>
  <Text
    style={
      Object {
        "fontFamily": "GHGuardianHeadline-Regular",
        "fontSize": 16,
        "letterSpacing": 0.25,
        "lineHeight": 17,
      }
    }
  >
    Luton 3 - 0 Watford
  </Text>
</View>
`;

exports[`SportScore should show a SportScore with smallItems styling 1`] = `
<View
  accessibilityLabel="Luton 3 - 0 Watford"
  style={
    Array [
      Object {
        "backgroundColor": "#ffe500",
        "padding": 0,
        "paddingBottom": 2,
        "paddingHorizontal": 4.666666666666667,
      },
      Object {
        "flex": 0,
      },
    ]
  }
>
  <Text
    style={
      Object {
        "fontFamily": "GHGuardianHeadline-Regular",
        "fontSize": 16,
        "letterSpacing": 0.25,
        "lineHeight": 17,
      }
    }
  >
    Luton 3 - 0 Watford
  </Text>
</View>
`;

exports[`SportScore should show a SportScore with trailImage styling 1`] = `
<View
  accessibilityLabel="Luton 3 - 0 Watford"
  style={
    Array [
      Object {
        "backgroundColor": "#ffe500",
        "padding": 0,
        "paddingBottom": 2,
        "paddingHorizontal": 4.666666666666667,
      },
      Object {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
      },
    ]
  }
>
  <Text
    style={
      Object {
        "fontFamily": "GHGuardianHeadline-Regular",
        "fontSize": 16,
        "letterSpacing": 0.25,
        "lineHeight": 17,
      }
    }
  >
    Luton 3 - 0 Watford
  </Text>
</View>
`;
